--- a/client/user/src/mealorder/menu/meal-order-drawer.html
+++ b/client/user/src/mealorder/menu/meal-order-drawer.html
@@ -117,9 +117,10 @@
                     date.setDate(date.getDate());
                     date.setMonth(date.getMonth());
 
+                    const YESTERDAY= -1;
                     const yesterdayDate = {};
                     yesterdayDate.year = "" + date.getFullYear();
-                    yesterdayDate.month = ("0" + (date.getMonth() + 1)).slice(-2);
+                    yesterdayDate.month = ("0" + (date.getMonth() + 1)).slice(YESTERDAY-1);
                     yesterdayDate.day = "" + (date.getDate() - 1);
                     this.set('inputDate', yesterdayDate.year + "/" + yesterdayDate.month + "/" +
                         yesterdayDate.day);
@@ -163,7 +164,6 @@
                 }
             }
         }
-
         window.customElements.define(MealOrderDrawer.is, MealOrderDrawer);
     </script>
 </dom-module>
