Update properties docs

--- a/client/user/src/mealorder/meal-order-client-app.html
+++ b/client/user/src/mealorder/meal-order-client-app.html
@@ -79,7 +79,9 @@
             static get properties() {
                 return {
                     /**
-                     * User for routing.
+                     * Route data parsed using `app-route`.
+                     *
+                     * Used for routing.
                      */
                     routeData: {}
                 }
