--- a/client/user/index.html
+++ b/client/user/index.html
@@ -30,7 +30,8 @@
     <title>MealOrder</title>
     <style>
         body {
-            background-color: #F2F2F2;
+            background-color: var(--paper-grey-100);
+            color: var(--google-grey-700);
         }
     </style>
 </head>
