--- a/client/user/src/mealorder/meal-order-client-app.html
+++ b/client/user/src/mealorder/meal-order-client-app.html
@@ -49,7 +49,7 @@
         <app-drawer-layout fullbleed>
 
             <app-drawer slot="drawer" align="right">
-                <app-toolbar style="background-color: white">
+                <app-toolbar>
                 </app-toolbar>
             </app-drawer>
 
