--- a/client/user/test/mealorder/meal-order-client-app_test.html
+++ b/client/user/test/mealorder/meal-order-client-app_test.html
@@ -29,7 +29,7 @@
 
     <script src="../../bower_components/webcomponentsjs/webcomponents-loader.js"></script>
     <script src="../../bower_components/web-component-tester/browser.js"></script>
-
+    <script src="../../node_modules/redux/dist/redux.js"></script>
     <link rel="import" href="../../src/mealorder/meal-order-client-app.html">
 
 </head>
@@ -54,10 +54,8 @@
             component = fixture('BasicClientApp');
         });
         test('should parse url correctly', function () {
-            setLocation('');
-            console.log(component.routeData);
-            assert.equal('name-adder', 'shit');
-
+            setLocation('/#/history/');
+            assert.equal('history', component.routeData.page);
         });
     });
 </script>
