Add tests for `vendor-menu`

--- a/client/user/src/mealorder/menu/meal-order-vendor-menu.html
+++ b/client/user/src/mealorder/menu/meal-order-vendor-menu.html
@@ -180,7 +180,7 @@
                      * @property {array} categories list of categories with dishes.
                      */
                     menu: {
-                        type: Array
+                        type: Object
                     }
                 }
             }
