Edit docs for `vendor-menus`

--- a/client/user/src/mealorder/menu/meal-order-vendor-menus.html
+++ b/client/user/src/mealorder/menu/meal-order-vendor-menus.html
@@ -128,7 +128,7 @@
                     /**
                      * Full menu for day.
                      *
-                     * @property {array} each item is a menu of a vendor for a day.
+                     * @property {{name:String vendor name, categories:array a menu of a vendor for a day}}.
                      */
                     items: {
                         type: Array,
