--- a/client/user/src/mealorder/menu/meal-order-vendor-menu.html
+++ b/client/user/src/mealorder/menu/meal-order-vendor-menu.html
@@ -174,6 +174,13 @@
             static get properties() {
                 return {
                     /**
+                     * Fired on `add-button` click.
+                     *
+                     * @action `dish-added`
+                     * @param {dish} contains vendor, category and dish title
+                     */
+
+                    /**
                      * Menu of a vendor.
                      *
                      * @property name is name of a vendor.
