--- a/client/user/src/mealorder/shell/actions/user-actions.html
+++ b/client/user/src/mealorder/shell/actions/user-actions.html
@@ -20,7 +20,7 @@
 
 <script>
     MealOrderApp.UserAction = {
-        CHANGE_CURRENT_MENU: "CHANGE_CURRENT_MENU",
-        CHANGE_CURRENT_CART: 'CHANGE_CURRENT_CART',
+        SET_CURRENT_MENU: "SET_CURRENT_MENU",
+        SET_CURRENT_CART: 'SET_CURRENT_CART',
     }
 </script>
