--- a/client/user/src/mealorder/shell/actions/user-actions.html
+++ b/client/user/src/mealorder/shell/actions/user-actions.html
@@ -22,5 +22,6 @@
     MealOrderApp.UserAction = {
         SET_CURRENT_MENU: "SET_CURRENT_MENU",
         SET_CURRENT_CART: 'SET_CURRENT_CART',
+        ADD_DISH: 'ADD_DISH'
     }
 </script>
